--- a/signin.html
+++ b/signin.html
@@ -69,7 +69,7 @@
           <div class="remember-forget">
             <label>
               <input type="checkbox">
-              I agree to the terms & conditions
+              I agree to the terms [&] conditions
             </label>
           </div>
 
