--- a/single-product.html
+++ b/single-product.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <script src="https://kit.fontawesome.com/c79c075354.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <section id="header">
