--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h4>Trade-in-offer</h4>
         <h2>Super value deals</h2>
         <h1>On all products</h1>
-        <p>Save more with coupons [&] up to <span class="sales">30% off!</span></p>
+        <p>Save more with coupons &amp; up to <span class="sales">30% off!</span></p>
         <button><a href="shop.html">Shop Now</a></button>
     </section>
     
@@ -272,13 +272,13 @@
     </section>
 
 
-    <footer class="section-p1 footer">
+	<footer class="section-p1 footer">
         <div class="col">
             <img class="logo" src="img/logo.png" alt="">
             <h4>Contact</h4>
-            <p><strong>Address:</strong>Trường Đại học Công Nghệ Thông Tin, Quận Thủ Đức, TP.Hồ Chí Minh</p>
-            <p><strong>Phone:</strong>0967692310</p>
-            <p><strong>Hours:</strong>8:00-20.00, Monday-Saturday</p>
+            <p><strong>Address: </strong>Trường Đại học Công Nghệ Thông Tin, Quận Thủ Đức, TP.Hồ Chí Minh</p>
+            <p><strong>Phone: </strong>0967692310</p>
+            <p><strong>Hours: </strong>8:00-20.00, Monday-Saturday</p>
             <div class="follow">
                 <h4>Follow us</h4>
                 <div class="icon">
@@ -295,7 +295,7 @@
             <a href="#">About us</a>
             <a href="#">Delivery Information</a>
             <a href="#">Privacy Policy</a>
-            <a href="#">Terms [&] Conditions</a>
+            <a href="#">Terms &amp; Conditions</a>
             <a href="#">Contact us</a>
         </div>
 
