--- a/contact.html
+++ b/contact.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="/style/contact.css"/>
     <link rel="stylesheet" href="/style/general.css"/>
 
-    <script
-      src="https://kit.fontawesome.com/64d58efce2.js"
-      crossorigin="anonymous"
-    ></script>
+    <link rel="stylesheet" href="font/themify-icons-font/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <script src="https://kit.fontawesome.com/c79c075354.js" crossorigin="anonymous"></script>
+
   </head>
 
 
